# pyTorchChamferDistance

./: CMakeLists.txt
chamfer_distance/: chamfer_distance.cpp  chamfer_distance.cu
include/chamfer_distance/: chamfer_distance.h
src/: chamfer_distance.cpp  chamfer_distance.cu
